# varasplit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  vercel.json
.github/workflows/: ci.yml
app/: Cargo.toml  vara_split_escrow.opt.wasm
app/src/: lib.rs
client/: Cargo.toml  build.rs  vara_split_client.idl
client/src/: lib.rs  vara_split_client.rs
docs/plans/: 2026-04-10-varasplit-architecture.md  2026-04-10-varasplit-spec.md  2026-04-10-varasplit-tasks.md  2026-04-14-varasplit-invoice-nft-architecture.md  2026-04-14-varasplit-invoice-nft-spec.md  2026-04-14-varasplit-invoice-nft-tasks.md  2026-04-14-varasplit-stable-ledger-architecture.md  2026-04-14-varasplit-stable-ledger-spec.md  2026-04-14-varasplit-stable-ledger-tasks.md  2026-04-14-varasplit-verifiable-settlement-gtest.md
frontend/: .env.local  README.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/dev/: prerender-manifest.json  react-loadable-manifest.json
frontend/.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
frontend/.next/dev/server/: app-paths-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/dev/types/: routes.d.ts  validator.ts
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: _not-found.html  _not-found.rsc  create.html  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  work-payouts.html  work-payouts.rsc
frontend/.next/server/chunks/: 104.js  143.js  229.js  24.js  309.js  411.js  537.js  (+3 more)
frontend/.next/types/: validator.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/create/: page.tsx
frontend/app/work-payouts/: page.tsx
frontend/components/: ActionBanner.tsx  AnimatedCard.tsx  AnimatedHeroBackground.tsx  AppPreloader.tsx  ConnectGuard.tsx  EmptyState.tsx  ErrorBox.tsx  HeaderActions.tsx  InvoiceSeal.tsx  LoadingSpinner.tsx  MemberPill.tsx  MotionSection.tsx  NotificationCenter.tsx  ProgressPill.tsx  SectionTitle.tsx  ShareButton.tsx  StatusBadge.tsx  SuccessToast.tsx  SummaryStatCard.tsx  WalletButton.tsx  WalletModal.tsx  WorkPayoutInviteModal.tsx  add-expense-modal.tsx  animated-number.tsx  invoice-card.tsx  share-card.tsx  wallet-connect.tsx
frontend/idl/: WorkPayoutProof.idl
frontend/lib/: actionCenter.ts  adapter.ts  address.ts  config.ts  constants.ts  derived.ts  format.ts  gear.ts  idl.ts  storage.ts  types.ts  wallet.ts  workPayoutAdapter.ts  workPayoutIdl.ts  workPayoutInvite.ts
frontend/lib/contracts/: varaSplit.idl
frontend/scripts/: patch-sr25519.js
src/: lib.rs
tests/: gtest.rs
work-payout-proof/: Cargo.toml  README.md  work_payout_proof.opt.wasm
work-payout-proof/src/: lib.rs
(+874 files in other folders)
