[package]
name = "vara-split"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Package allowing to build WASM binary for the program and IDL file for it"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs.workspace = true
vara-split-app.workspace = true

[dev-dependencies]
sails-rs = { workspace = true, features = ["gtest", "gclient"] }
tokio = { workspace = true, features = ["rt", "macros"] }
vara-split-app.workspace = true
vara-split-client.workspace = true

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
vara-split-app.workspace = true

[workspace]
resolver = "3"
members = ["app", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Shashwat Chauhan"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/shashwatchauhan/vara-split"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.3"
tokio = "1.48.0"
vara-split-app = { version = "0.1.0", path = "app" }
vara-split-client = { version = "0.1.0", path = "client" }
