[workspace]
resolver = "3"
members = ["client"]
exclude = ["app"]

[workspace.package]
version = "0.1.0"
authors = ["Shashwat Chauhan"]
edition = "2024"
rust-version = "1.91"
repository = "https://github.com/shashwatchauhan/vara-split"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[workspace.dependencies]
sails-rs = "0.10.3"
tokio = "1.48.0"
vara-split-client = { version = "0.1.0", path = "client" }
vara_split_escrow = { version = "0.1.0", path = "app" }
