[package]
name = "work_payout_proof"
version = "0.1.0"
authors = ["Shashwat Chauhan"]
edition = "2024"
rust-version = "1.91"
description = "VaraSplit Work & Payouts proof smart contract"
repository = "https://github.com/shashwatchauhan/vara-split"
license = "MIT"
keywords = ["gear", "sails", "smart-contracts", "wasm", "no-std"]
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sails-rs = "0.10.3"

[build-dependencies]
sails-rs = { version = "0.10.3", features = ["build"] }

[workspace]
resolver = "3"

[profile.dev]
opt-level = "z"

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
